fixed spacing again

--- a/src/pages/help/Help.scss
+++ b/src/pages/help/Help.scss
@@ -428,7 +428,7 @@ button.help-section__header {
     list-style-position: outside;
 
     @media (max-width: $mobile-breakpoint) {
-      padding-left: $space-5;
+      padding-left: $space-6;
       margin: 0 0 $space-2;
     }
   }
